--- a/Source/abstract.tex
+++ b/Source/abstract.tex
@@ -1,3 +1,13 @@
 \begin{abstract}
-	
+    Uczenie maszynowe od samych początków dziedziny czerpało inspirację w naturze: algorytmy ewolucyjne, samo-organizujące się sieci i wiele innych.
+    Wykorzystanie pomysłów z neurobiologii zrodziło z kolei sztuczne sieci neuronowe oraz uczenie głębokie.
+    Początkowo pokładano nadzieje, że obie dziedziny wzajemnie będą się wspierać i popychać do przodu.
+    Jednak z biegiem czasu trend był przeciwny, a uczenie głębokie i neuronauka rozwijały się w przeciwnych kierunkach.
+
+    Najnowsze odkrycia i techniki z neuronauki oraz uczenia głębokiego pozwalają jednak uważać, że trend ten się odwrócił, a dziedziny te na powrót zmierzają ku sobie.
+    Ponowne powiązanie tych dwóch dziedzin oznaczałoby dla neuronauki znacznie prostszy sposób badania działania mózgu poprzez zestawianie go z odpowiednikiem w uczeniu głębokim.
+    Dla drugiego z kolei oznaczałoby to prawdopodobnie kolejny skok zakresu tego, co możliwe -- wzorowanie się na działaniu tego ewolucyjnie ukształtowanego i niesamowicie wydajnego organu może dać możliwość rozwiązania aktualnych problemów uczenia maszynowego.
+
+    W tej pracy przedstawiam wyniki badań gruntujących podstawy strukturalnego porównania mózgu i nowoczesnych sztucznych sieci neuronowych.
+    Dodatkowo prezentuję i zestawiam zbiór naukowo podpartych opinii i hipotez badaczy dotyczących natury mózgu, uczenia głębokiego i tego, jak bardzo są one do siebie zbliżone.
 \end{abstract}
