--- a/Source/chapter1.tex
+++ b/Source/chapter1.tex
@@ -4,7 +4,8 @@
 Już niedługo po pierwszych teoriach i propozycjach dotyczących maszyn przeprowadzających obliczenia przedstawiły się one jako ciekawa koncepcja dla filozofii umysłu i psychologii.
 Maszyna Turinga ze swoimi możliwościami przetwarzania informacji oraz terminologia z nią związana stały się nową popularną metaforą działania umysłu.
 Aktualnie prawie każdy większy dział nauk humanistycznych ma swój komputacjonistyczny odłam skupiający się na tym właśnie aspekcie jako wbudowanej cesze świata rzeczywistego.
-Był to kolejny z wielu innych trendów analogii i metafory w psychologii \cite{vroon1987man}, jednak z biegiem czasu przez wielu uważany za najbliższy prawdy.
+Oczywiście nie był to pierwszy z wielu innych trendów analogii i metafory w psychologii, z każdym większym wynalazkiem i rewolucją naukową dziedzina ta adoptowała swoją terminologię i tłumaczenia \cite{vroon1987man}.
+Jednak z biegiem czasu przez wielu to właśnie nowe, cybernetyczne podejście uważane było za najbliższy prawdy.
 
 \section{Algorytmy uczenia maszynowego inspirowane naturą i biologią}
 
