--- a/Source/chapter3.tex
+++ b/Source/chapter3.tex
@@ -59,7 +59,7 @@ Jest aktualnie wiele zaproponowanych mechanizmów podobnego uczenia, które był
 Jedną z nich jest wersja wspomnianego STDP, gdzie neurony mają kodować pochodne błędu wymagane przy propagacji wstecznej w różnicach częstotliwości aktywacji (\hyperref[fig:spike-timing-dependent-plasticity]{rysunek \ref*{fig:spike-timing-dependent-plasticity}}) \cite{hinton2016can}.
 Efektywnie oznaczałoby to, że mózg wykorzystuje mechanizm propagacji wstecznej.
 
-\begin{figure}[h!]
+\begin{figure}[!ht]
 	\includegraphics[width=\textwidth]{Images/SpikeTimingDependentPlasticity}
 	\caption{Plastyczność zależna od momentu spike'a (STDP)}
 	Wykres przedstawia asymetryczne okno czasowe plastyczności zależnej od momentu spike'a (\emph{spike-timing-dependent plasticity}) (źródło: \cite{yao2005synaptic}).
