--- a/Source/refs.bib
+++ b/Source/refs.bib
@@ -442,6 +442,15 @@
 	year         = {2017},
 	organization = {PMLR}
 }
+@article{reggia2013rise,
+	title     = {The rise of machine consciousness: Studying consciousness with computational models},
+	author    = {Reggia, James A},
+	journal   = {Neural Networks},
+	volume    = {44},
+	pages     = {112--131},
+	year      = {2013},
+	publisher = {Elsevier}
+}
 @article{rodriguez2004derivation,
 	title     = {Derivation and analysis of basic computational operations of thalamocortical circuits},
 	author    = {Rodriguez, A and Whitson, J and Granger, R},
@@ -579,6 +588,13 @@
 	pages     = {230--265},
 	year      = {1937},
 	publisher = {Wiley Online Library}
+}
+@article{turing1969intelligent,
+	title   = {Intelligent machinery. 1948},
+	author  = {Turing, Alan},
+	journal = {The Essential Turing},
+	pages   = {395},
+	year    = {1969}
 }
 @article{ullman2012simple,
 	title     = {From simple innate biases to complex visual concepts},
