--- a/Source/thesis-onesided.tex
+++ b/Source/thesis-onesided.tex
@@ -53,6 +53,8 @@
 
 % Add an abstract
 \include{abstract}
+% Add an abstract in english
+\include{abstract-en}
 
 % Start roman page numbering
 \begin{romanpages}
