--- a/Source/ociamthesis.cls
+++ b/Source/ociamthesis.cls
@@ -248,6 +248,15 @@
    \begin{quote}}
 {\end{quote}\end{alwayssingle}}
 
+\newenvironment{abstract-en} {\begin{alwayssingle} \thispagestyle{empty}
+  \begin{center}
+  \vspace*{1.5cm}
+  {\Large \bfseries  Abstract}
+  \end{center}
+  \vspace{0.5cm}
+   \begin{quote}}
+{\end{quote}\end{alwayssingle}}
+
 %The abstractlong environment puts a large, bold, centered "Abstract" label at
 %the top of the page. The abstract itself does not appears in a quote
 %environment so you can get more in.
