Dodanie rozdziału z dyskusją

--- a/Source/refs.bib
+++ b/Source/refs.bib
@@ -74,11 +74,11 @@
 	publisher = {Nature Publishing Group}
 }
 @article{casey1989computational,
+	title   = {The Computational Metaphor and Cognitive Psychology},
 	author  = {Casey, Gerard and Moran, Aidan},
 	year    = {2012},
 	month   = {11},
 	pages   = {143-161},
-	title   = {The Computational Metaphor and Cognitive Psychology},
 	volume  = {10},
 	journal = {The Irish Journal of Psychology},
 	doi     = {10.1080/03033910.1989.10557739}
@@ -120,6 +120,16 @@
 	author    = {De Schutter, Erik},
 	year      = {2018},
 	publisher = {Springer}
+}
+@article{dietrich2001banbury,
+	title     = {Banbury bound or Can a machine be conscious?},
+	author    = {Dietrich, Eric},
+	journal   = {Journal of Experimental \& Theoretical Artificial Intelligence},
+	volume    = {13},
+	number    = {3},
+	pages     = {177--180},
+	year      = {2001},
+	publisher = {Taylor \& Francis}
 }
 @article{doya1999computations,
 	title     = {What are the computations of the cerebellum, the basal ganglia and the cerebral cortex?},
@@ -303,6 +313,16 @@
 	year      = {2007},
 	publisher = {Nature Publishing Group}
 }
+@article{jonas2017could,
+	title     = {Could a neuroscientist understand a microprocessor?},
+	author    = {Jonas, Eric and Kording, Konrad Paul},
+	journal   = {PLoS computational biology},
+	volume    = {13},
+	number    = {1},
+	pages     = {e1005268},
+	year      = {2017},
+	publisher = {Public Library of Science San Francisco, CA USA}
+}
 @article{kappel2014stdp,
 	title     = {STDP installs in winner-take-all circuits an online approximation to hidden Markov model learning},
 	author    = {Kappel, David and Nessler, Bernhard and Maass, Wolfgang},
@@ -312,6 +332,16 @@
 	pages     = {e1003511},
 	year      = {2014},
 	publisher = {Public Library of Science}
+}
+@article{kell2018task,
+	title     = {A task-optimized neural network replicates human auditory behavior, predicts brain responses, and reveals a cortical processing hierarchy},
+	author    = {Kell, Alexander JE and Yamins, Daniel LK and Shook, Erica N and Norman-Haignere, Sam V and McDermott, Josh H},
+	journal   = {Neuron},
+	volume    = {98},
+	number    = {3},
+	pages     = {630--644},
+	year      = {2018},
+	publisher = {Elsevier}
 }
 @incollection{koza1996automated,
 	title     = {Automated design of both the topology and sizing of analog electrical circuits using genetic programming},
@@ -343,12 +373,28 @@
 	note         = {Dostęp: 20 maja 2021},
 	organization = {Lambda labs}
 }
+@article{lillicrap2013preference,
+	title     = {Preference distributions of primary motor cortex neurons reflect control solutions optimized for limb biomechanics},
+	author    = {Lillicrap, Timothy P and Scott, Stephen H},
+	journal   = {Neuron},
+	volume    = {77},
+	number    = {1},
+	pages     = {168--179},
+	year      = {2013},
+	publisher = {Elsevier}
+}
 @inproceedings{lin2015bilinear,
 	title     = {Bilinear cnn models for fine-grained visual recognition},
 	author    = {Lin, Tsung-Yu and RoyChowdhury, Aruni and Maji, Subhransu},
 	booktitle = {Proceedings of the IEEE international conference on computer vision},
 	pages     = {1449--1457},
 	year      = {2015}
+}
+@article{mallakin2019integration,
+	title   = {An integration of deep learning and neuroscience for machine consciousness},
+	author  = {Mallakin, Ali},
+	journal = {Global Journal of Computer Science and Technology},
+	year    = {2019}
 }
 @article{mandt2017stochastic,
 	title   = {Stochastic gradient descent as approximate bayesian inference},
@@ -541,6 +587,7 @@
 	publisher = {Elsevier}
 }
 @article{simon1962architecture,
+	title     = {The Architecture of Complexity},
 	issn      = {0003049X},
 	url       = {http://www.jstor.org/stable/985254},
 	author    = {Herbert A. Simon},
@@ -548,7 +595,6 @@
 	number    = {6},
 	pages     = {467--482},
 	publisher = {American Philosophical Society},
-	title     = {The Architecture of Complexity},
 	volume    = {106},
 	year      = {1962}
 }
@@ -615,13 +661,33 @@
 	year      = {1987},
 	publisher = {Elsevier}
 }
+@article{yamins2014performance,
+	title     = {Performance-optimized hierarchical models predict neural responses in higher visual cortex},
+	author    = {Yamins, Daniel LK and Hong, Ha and Cadieu, Charles F and Solomon, Ethan A and Seibert, Darren and DiCarlo, James J},
+	journal   = {Proceedings of the national academy of sciences},
+	volume    = {111},
+	number    = {23},
+	pages     = {8619--8624},
+	year      = {2014},
+	publisher = {National Acad Sciences}
+}
 @article{yao2005synaptic,
+	title   = {Synaptic Learning Rules, Cortical Circuits, and Visual Function},
 	author  = {Yao, Haishan and Dan, Yang},
 	year    = {2005},
 	month   = {07},
 	pages   = {206-16},
-	title   = {Synaptic Learning Rules, Cortical Circuits, and Visual Function},
 	volume  = {11},
 	journal = {The Neuroscientist : a review journal bringing neurobiology, neurology and psychiatry},
 	doi     = {10.1177/1073858404272404}
+}
+@article{zlatev2000meaning,
+	title     = {Meaning= life (+ culture): an outline of a unified biocultural theory of meaning},
+	author    = {Zlatev, Jordan},
+	journal   = {Evolution of communication},
+	volume    = {4},
+	number    = {2},
+	pages     = {253--296},
+	year      = {2000},
+	publisher = {John Benjamins}
 }
