--- a/Source/introduction.tex
+++ b/Source/introduction.tex
@@ -1,36 +1,36 @@
 \chapter*{Wstęp}
 \addcontentsline{toc}{chapter}{Wstęp}
 
-Alan Turing był prawdopodobnie pierwszą osobą, która proponowała zbudowanie sztucznego systemu obliczeniowego przy pomocy prostych jednostek przypominających neurony zorganizowanych w strukturę sieciową \cite{turing1969intelligent}.
+Alan Turing był prawdopodobnie pierwszą osobą, która proponowała zbudowanie sztucznego systemu obliczeniowego przy pomocy prostych jednostek przypominających neurony zorganizowanych w~strukturę sieciową \cite{turing1969intelligent}.
 Nazwał je ``maszynami niezorganizowanymi''.
 Dzisiaj bardzo dobrze znany jest podobny koncept -- sztuczne sieci neuronowe -- na których opiera się dziedzina uczenia głębokiego, podzbiór technik uczenia maszynowego odznaczający się największymi osiągnięciami.
 
-Jego początki były mocno inspirowane działaniem biologicznego mózgu i próbą jego uproszczonego modelowania.
+Jego początki były mocno inspirowane działaniem biologicznego mózgu i~próbą jego uproszczonego modelowania.
 Z czasem obie dziedziny -- uczenie maszynowe oraz neuronauka -- zaczęły się rozjeżdżać.
-Pierwsza skupiła się na optymalizacji funkcji kosztu \cite{sutskever2013importance}, gdzie w drugiej pojawiły się istotne aspekty strukturalne, nowe typy komórek czy zachodzących procesów \cite{solari2011cognitive}.
-Wraz z czasem różnice się tylko pogłębiały i ludzie przestali traktować tw dziedziny jako powiązane czy posiadające podobieństwa strukturalne.
+Pierwsza skupiła się na optymalizacji funkcji kosztu \cite{sutskever2013importance}, gdzie w~drugiej pojawiły się istotne aspekty strukturalne, nowe typy komórek czy zachodzących procesów \cite{solari2011cognitive}.
+Wraz z~czasem różnice się tylko pogłębiały i~ludzie przestali traktować te dziedziny jako powiązane czy posiadające podobieństwa strukturalne.
 
-Nowoczesne badania, odkrycia po stronie neuronauki oraz nowe rozwiązania stosowane w uczeniu głębokim pozwalają jednak sądzić, że ten trend się odwraca.
-Wysokopoziomowe struktury mózgu funkcjonalnie przypominają struktury wykorzystywane w uczeniu maszynowym, a z kolei ono zaczyna wykorzystywać techniki i rozwiązania, które można zaobserwować w działaniu mózgu.
+Nowoczesne badania, odkrycia po stronie neuronauki oraz nowe rozwiązania stosowane w~uczeniu głębokim pozwalają jednak sądzić, że ten trend się odwraca.
+Wysokopoziomowe struktury mózgu funkcjonalnie przypominają struktury wykorzystywane w~uczeniu maszynowym, a~z kolei ono zaczyna wykorzystywać techniki i~rozwiązania, które można zaobserwować w~działaniu mózgu.
 
-Należy tutaj zaznaczyć, że mowa jest o \emph{mózgu} -- biologicznym narządzie opowiadającym za działania poznawcze.
-Często dyskusja dotycząca sztucznej inteligencji i jej możliwości jest przeciwstawiana \emph{umysłowi}.
-W niektórych aspektach, najczęściej psychologicznych, spekulacje odnośnie umysłu są dość bliskie fizycznego systemom funkcjonalnym w mózgu, takim jak pamięć, systemy uwagowe i inne podobne.
-Pojawiają się natomiast także aspekty filozoficzne, a przede wszystkim świadomość czy intencjonalność działania, które zawsze towarzyszą dyskusji na temat sztucznej inteligencji a umysłu.
-Pojawiają się głosy mocno sceptyczne \cite{searle1980minds}, jak i przeciwnie, gdzie zaznacza się znaczenie neuronauki w tematyce świadomości \cite{reggia2013rise}.
+Należy tutaj zaznaczyć, że mowa jest o~\emph{mózgu} -- biologicznym narządzie opowiadającym za działania poznawcze.
+Często dyskusja dotycząca sztucznej inteligencji i~jej możliwości jest przeciwstawiana \emph{umysłowi}.
+W niektórych aspektach, najczęściej psychologicznych, spekulacje odnoszące się do umysłu są dość bliskie fizycznego systemom funkcjonalnym w~mózgu, takim jak pamięć, systemy uwagowe i~inne podobne.
+Pojawiają się natomiast także aspekty filozoficzne, a~przede wszystkim świadomość czy intencjonalność działania, które zawsze towarzyszą dyskusji na temat sztucznej inteligencji a~umysłu.
+Pojawiają się głosy mocno sceptyczne \cite{searle1980minds}, jak i~przeciwnie, gdzie zaznacza się znaczenie neuronauki w~tematyce świadomości \cite{reggia2013rise}.
 
 W tej pracy jednak aspekty fenomenologiczne zostaną pominięte.
-Przede wszystkim przedmiotem zestawienia mają być funkcjonalne działanie mózgu wspierane biologicznymi strukturami je opisującymi lub umożliwiającymi, a ogólnymi założeniami uczenia maszynowego oraz technikami i strukturami używanymi w uczeniu głębokim.
-Analizując nowe badaniami i techniki można zauważyć, że te dwie koncepcje zaczynają siebie wzajemnie bardzo przypominać.
+Przede wszystkim przedmiotem zestawienia mają być funkcjonalne działanie mózgu wspierane biologicznymi strukturami je opisującymi lub umożliwiającymi, a~ogólnymi założeniami uczenia maszynowego oraz technikami i~strukturami używanymi w~uczeniu głębokim.
+Analizując nowe badaniami i~techniki można zauważyć, że te dwie koncepcje zaczynają siebie wzajemnie bardzo przypominać.
 
-Potwierdzenie takich powiązań może być bardzo owocne zarówno dla uczenia głębokiego, w konsekwencji maszynowego a także neuronauki.
-Niepodważalnie mózg jest niesamowicie efektywny i wydajny w tym, co robi.
-Czy to jest przetwarzanie symboliczne informacji o świecie w sposób zbliżony do tego, jak robi to komputer jest nadal debatowane, jednak mocno podparte -- oraz w tej pracy także przedstawiane.
-Jeśli tak, to wykorzystanie technik obecnych w mózgu może być dla uczenia maszynowego kolejnym, wielkim skokiem w przód.
-Co więcej, analiza działania takich systemów -- nieporównywalnie prostsza w wykonaniu niż analiza działania mózgu -- może poszerzyć wiedzę neuronaukową w sposób dotychczas niedostępny.
+Potwierdzenie takich powiązań może być bardzo owocne zarówno dla uczenia głębokiego, w~konsekwencji maszynowego a~także neuronauki.
+Niepodważalnie mózg jest niesamowicie efektywny i~wydajny w~tym, co robi.
+Czy to jest przetwarzanie symboliczne informacji o~świecie w~sposób zbliżony do tego, jak robi to komputer jest nadal debatowane, jednak mocno podparte -- oraz w~tej pracy także przedstawiane.
+Jeśli tak, to wykorzystanie technik obecnych w~mózgu może być dla uczenia maszynowego kolejnym, wielkim skokiem w~przód.
+Co więcej, analiza działania takich systemów -- nieporównywalnie prostsza w~wykonaniu niż analiza działania mózgu -- może poszerzyć wiedzę neuronaukową w~sposób dotychczas niedostępny.
 
-W celu wyciągania takich wniosków należy najpierw sprawdzić założenia, z których miałyby wynikać.
-Takie powiązania wymagałoby od mózgu oraz systemów uczenia maszynowego strukturalnego powiązane czy podobieństwa funkcjonalnego w budowie oraz aspektów takich, jak czy mózg można traktować jako system symboliczny.
-Dalej należy pokazać możliwe powiązania w samym działaniu, ich zasadność i wspierające je badania.
-Celem tej pracy jest przedstawienie aktualnego stanu wiedzy świata naukowego na te tematy, przedstawienie opinii i działań badaczy opisujących wspomniane problemy, zbierając w jedno miejsce ich rezultaty oraz wyniki.
+W celu wyciągania takich wniosków należy najpierw sprawdzić założenia, z~których miałyby wynikać.
+Takie powiązania wymagałoby od mózgu oraz systemów uczenia maszynowego strukturalnego powiązane czy podobieństwa funkcjonalnego w~budowie oraz aspektów takich, jak czy mózg można traktować jako system symboliczny.
+Dalej należy pokazać możliwe powiązania w~samym działaniu, ich zasadność i~wspierające je badania.
+Celem tej pracy jest przedstawienie aktualnego stanu wiedzy świata naukowego na te tematy, przedstawienie opinii i~działań badaczy opisujących wspomniane problemy, zbierając w~jedno miejsce ich rezultaty oraz wyniki.
 Jak się okazuje, wspólnie przedstawiają one optymistyczny obraz potencjalnego ponownej integracji dziedzin uczenia maszynowego oraz neuronauki.
