--- a/Source/thesis-onesided.tex
+++ b/Source/thesis-onesided.tex
@@ -12,7 +12,7 @@
 	pdftitle={Uczenie głębokie i maszynowe a mózg},
 	pdfsubject={Praca licencjacka},
 	pdfauthor={Mateusz Piotr Moruś},
-	pdfkeywords={}
+	pdfkeywords={uczenie maszynowe, uczenie głębokie, sieci neuronowe, neuronauka, architektura kognitywna}
 }
 \usepackage{graphicx}
 
@@ -26,16 +26,16 @@
 % Make the numbering of tables continuous
 \counterwithout{table}{chapter}
 
-\title{Uczenie głębokie i maszynowe\\a mózg\\ \ }
+\title{Uczenie głębokie i~maszynowe\\a mózg\\ \ }
 \engtitle{Deep and machine learning\\and the brain}
 \author{Mateusz Piotr Moruś}
 \albumnumber{292540}
 \university{UNIWERSYTET MARII CURIE-SKŁODOWSKIEJ W~LUBLINIE}
-\college{Wydział Filozofii i Socjologii}
+\college{Wydział Filozofii i~Socjologii}
 \field{Kognitywistyka}
 \speciality{-}
 \submittedtext{Praca licencjacka}
-\department{Katedrze Neuroinformatyki i Inżynierii Biomedycznej}
+\department{Katedrze Neuroinformatyki i~Inżynierii Biomedycznej}
 \promoter{dr. hab. Grzegorza Marcina Wójcika, prof. UMCS}
 \degreedate{Lublin rok 2021}
 
